Fix insufficien color contrast in some elements

--- a/src/monument/components/MonumentCard/MonumentCard.css
+++ b/src/monument/components/MonumentCard/MonumentCard.css
@@ -40,5 +40,5 @@
   border-radius: 3px;
   align-self: flex-end;
   font-weight: bold;
-  color: rgb(253, 69, 69);
+  color: rgb(145, 4, 4);
 }
